This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix various typos
Type: Stage: resolved
Components: Versions: Python 3.6, Python 3.5, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: martin.panter, python-dev, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2016-06-01 03:57 by martin.panter, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
typos.py3.patch martin.panter, 2016-06-01 03:57 review
typos.py2.patch martin.panter, 2016-06-01 03:58 review
Messages (4)
msg266797 - (view) Author: Martin Panter (martin.panter) * (Python committer) Date: 2016-06-01 03:57
This fixes various spelling mistakes in documentation, code comments, and test function names.

There is also a correction to an exception message in Modules/_ctypes/callproc.c, which I propose to fix only in 3.6.
msg266799 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2016-06-01 06:19
typos.py3.patch LGTM. I expect typos.py2.patch is just backported to 2.7.
msg266805 - (view) Author: Martin Panter (martin.panter) * (Python committer) Date: 2016-06-01 07:51
Thanks. The py2 version is partly a back port, but I have searched for the same kind of spelling mistakes and fixed them in different places, e.g. “overriden” in Lib/bsddb/test/test_all.py, which does not exist in Py 3.
msg266882 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-06-02 10:41
New changeset ce31ee3b1e69 by Martin Panter in branch '3.5':
Issue #27171: Fix typos in documentation, comments, and test function names
https://hg.python.org/cpython/rev/ce31ee3b1e69

New changeset c67f1f4ebb32 by Martin Panter in branch 'default':
Issue #27171: Merge typo fixes from 3.5
https://hg.python.org/cpython/rev/c67f1f4ebb32

New changeset 0ddba0abab49 by Martin Panter in branch 'default':
Issue #27171: Fix typo in exception message
https://hg.python.org/cpython/rev/0ddba0abab49

New changeset b0b463760b45 by Martin Panter in branch '2.7':
Issue #27171: Fix typos in documentation, code comments, and tests
https://hg.python.org/cpython/rev/b0b463760b45
History
Date User Action Args
2022-04-11 14:58:31adminsetgithub: 71358
2016-06-02 11:20:39martin.pantersetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2016-06-02 10:41:09python-devsetnosy: + python-dev
messages: + msg266882
2016-06-01 07:51:39martin.pantersetmessages: + msg266805
2016-06-01 06:19:05serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg266799
2016-06-01 03:58:22martin.pantersetfiles: + typos.py2.patch
2016-06-01 03:57:50martin.pantercreate