Issue #27171: Fix typo in exception message